# FaceAuthServer

./: CMakeLists.txt  LICENSE  LICENSE.zh-CN  README.md  config.json
cmake/: FindJSONCPP.cmake  FindMySQL.cmake
include/: auth_server.h  db_manager.h  face_detector.h  face_recognizer.h  tcp_server.h  utils.h
scripts/: build.sh  run_server.sh  setup_database.sql
src/: auth_server.cpp  db_manager.cpp  face_detector.cpp  face_recognizer.cpp  main.cpp  tcp_server.cpp  utils.cpp
